--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/johnbfox/food-quest-cl#readme",
   "dependencies": {
     "axios": "0.14.0",
+    "graphql-request": "^1.6.0",
     "lodash": "4.16.2",
     "moment": "2.15.1"
   },
